# Inadequate-Balanced-Gerbil-Durhack25

./: LICENSE  README.md
backend/: .env.example  .flake8  AGENT_IMPROVEMENTS.md  AGENT_RETRY_LOGIC.md  AGENT_SEARCH_LIMIT_FIX.md  BACKGROUND_MATCHING_API.md  DATABASE_SETUP.md  EVENT_DEMO_README.md  EVENT_ID_FILTERING.md  EXCLUSION_LIST_FEATURE.md  MATCHER_IMPROVEMENTS.md  MATCHER_RUNNER.md  MATCHING_AGENT.md  QUICK_REFERENCE.md  SETUP_SUMMARY.md  alembic.ini  check_db.py  create_and_run_event.py  create_test_data.py  pyproject.toml  test_agent.py  test_matcher_runner.py  test_webhook.py  test_webhook_http.py  verify_data.py  watch_db.py
backend/alembic/: env.py
backend/alembic/versions/: 4286db5951f6_add_attendee_id_and_embedding_to_fact.py  8236a9feef9e_add_rsvp_and_going_fields_to_event_.py  9065788b4a4c_add_event_id_to_opinion.py  aecd72b5639f_change_joined_opinion_answer_to_integer.py  b81c35b669e2_replace_hello_with_event_models.py  dc1cf3323bd8_create_hello_table.py
backend/app/: database.py  db_example.py  gemini_service.py  main.py  matcher.py  matcher_runner.py  matching_agent.py  models.py
backend/app/routers/: events.py  hello.py  webhooks.py
frontend/: package-lock.json  package.json
frontend/src/: App.scss  App.tsx  index.scss  main.tsx
frontend/src/components/AttendeeManager/: AttendeeManager.module.scss  AttendeeManager.tsx
frontend/src/hooks/: useCallTimer.ts  useSeatingAlgorithm.ts
frontend/src/styles/: _variables.scss  global.scss
frontend/src/types/: call.types.ts  data.types.ts
frontend/src/utils/: permissions.ts
(+8 files in other folders)
