[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.120.4",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "google-generativeai>=0.8.3",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
]
